# pyqtrod

./: ECF.py  Fourkas.py  Helpers.py  LICENSE  MR_jupyter.mplstyle  MR_jupyter.py  MatrixChoose.ui  MatrixDialog.py  ModuleDialog.py  NIFolderTab.py  NITab.py  NITab.ui  NIVisualizator.py  NIfile.py  PlotTab.py  PyQtFunc.py  PyQtGraph.py  PyQtRGraph.py  PyQtRod.py  PyQtRod.pyproject  PyQtWorker.py  README.md  Untitled.ipynb  __init__.py  corr_matrix.py  form.ui  form2.cpp  mr.mplstyle  mr_widget.mplstyle  pyproject.toml  requirements.txt  setup.cfgold  speeds.py  step_detect.py  test.py  test2.py  test4.py
Helpers/: ECF.py  For_Declan_Steps.py  Fourkas.py  Helpers.py  MSD.py  ThetaPhiLine.py  compute_transitions.py  corr_matrix.py  correction_linearity.py  dwell_times.py  file_chunker.py  speeds.py  statisticsMR.py  step_detect.py  step_helpers.py  transition_analysis.py
Jupyter/: Jupyter_Rod_example.ipynb
Jupyter_Example/: Example_Michal.ipynb  Generic_analyis-2022_10_05_MTB24_Files32.ipynb  Untitled.ipynb
Modules/: AnisTraj.py  AnisTraj.ui.autosave  AnisTrajGL.py  ComputeCoeffs.py  FKtraj.py  FKtraj.ui  FKtraj.ui.autosave  FreqFFT.py  FreqFFT.ui  Traj_corr.py
Old/: AnisTraj.py  AnisTraj.ui  FreqFFTNew.py  Series.py
PyMRGraph/: ActionStyle.py  InputF.py  PyQtGraphGrid.py  PyQtRGraph.py  PyQtRGraphMenu.py  PyQtRPlot.py  PyQtRViewBox.py  PyQtRds.py  PyTabGraphMenu.py  RDSMenu.py  RPlotMenu (copie).py  RPlotMenu.py  __init__.py  dsStyleMenu.py  shared.py
Scripts/: ECF.py  HistogramFFT.py  LandscapeMovie.py  MSDMovie.py  MSD_speed.py  MoviePaper.py  Peaks_moving.py  (+16 more)
(+54 files in other folders)
